--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">MyTaxi</string>
   <string name="mapbox_access_token">sk.eyJ1Ijoic29kaXFqb24iLCJhIjoiY2xleTR0N3dxMDFrODQwbDNpMjg1cm9mdSJ9.bucIZA5CDpDbJbGj9ZI2Jg</string>
-<!--    <string name="mapbox_access_token">pk.eyJ1Ijoic29kaXFqb24iLCJhIjoiY2xleHlqMHlrMDRjcTNxa20za21rYnZkeSJ9.Aig7nxS33nXMSRbuQMsEag</string>-->
     <string name="order">Зазказы</string>
     <string name="rates">Тарифы</string>
     <string name="border">Бордюр</string>
     <string name="app">app</string>
+    <string name="cвободен">Свободен</string>
+  <string name="анят">Занят</string>
 </resources>
